--- a/style.css
+++ b/style.css
@@ -92,7 +92,8 @@ breakup {
   justify-content: space-between;
   width: 100%;
   flex-direction: row;
-  align-items: center; }
+  align-items: center;
+  margin: 0 0 2rem 0; }
 
 blank-space {
   border-bottom: 1px solid #ccc;
@@ -110,11 +111,10 @@ breakup h2 {
 /* ======================================================================== */
 rows {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  margin-bottom: 1rem; }
 
 rows row.rows_1, rows row.rows_2, rows row.rows_3 {
-  padding-bottom: 1em;
-  margin-top: 1em;
   display: flex;
   flex-direction: row; }
 
@@ -322,12 +322,6 @@ continue span {
   font-size: .8em;
   padding: .25em .8em .25em .5em; }
 
-/* ======================================================================== */
-@media all and (max-width: 1200px) {
-  article > content img,
-  article inner img {
-    height: auto;
-    width: 100%; } }
 /* ======================================================================== */
 /* single article */
 /* ======================================================================== */
@@ -1136,6 +1130,126 @@ h1.site-title {
 .search-form input {
   font-size: 1rem; }
 
+/* homepage story-card layout ********************************************************************/
+.card-row {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  margin: 0;
+  padding: 0; }
+
+.story-card {
+  flex-grow: 1;
+  height: 100%;
+  min-height: 360px;
+  max-height: 80vh;
+  margin: 0 0 1.5rem 0;
+  padding: 0;
+  position: relative;
+  width: 100%; }
+
+.story-card > a {
+  background-color: #999;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  xxxxborder: 1px solid #ddd;
+  display: block;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  width: 100%; }
+
+.story-card > a > .text {
+  margin-left: .5rem;
+  text-align: left;
+  width: 80%; }
+
+.story-card > a h2 {
+  background-color: #333;
+  box-decoration-break: clone;
+  box-shadow: .5rem 0 0 #333, -.5rem 0 0 #333;
+  color: #fff;
+  display: inline;
+  font-family: sans-serif;
+  font-size: 1.5rem;
+  font-weight: 300;
+  line-height: 1.35em;
+  padding: .25rem 0;
+  text-decoration: none;
+  -webkit-transition: all .5s ease;
+  -moz-transition: all .5s ease;
+  -o-transition: all .5s ease;
+  transition: all .5s ease; }
+
+.story-card > a:hover h2 {
+  background-color: #1330bf;
+  box-shadow: .5rem 0 0 #1330bf, -.5rem 0 0 #1330bf; }
+
+.story-card > a p,
+.story-card > a .continue {
+  background-color: transparent;
+  box-decoration-break: clone;
+  box-shadow: .5rem 0 0 transparent, -.5rem 0 0 transparent;
+  color: transparent;
+  display: inline;
+  font-family: sans-serif;
+  font-size: 1rem;
+  font-weight: 300;
+  line-height: 1.25rem;
+  padding: .15rem 0;
+  text-decoration: none;
+  -webkit-transition: all .5s ease;
+  -moz-transition: all .5s ease;
+  -o-transition: all .5s ease;
+  transition: all .5s ease; }
+
+.story-card > a:hover p {
+  background-color: #333;
+  box-shadow: .5rem 0 0 #333, -.5rem 0 0 #333;
+  color: #fff; }
+
+.story-card > a:hover .continue {
+  background-color: #1330bf;
+  box-shadow: .5rem 0 0 #1330bf, -.5rem 0 0 #1330bf;
+  color: #fff; }
+
+.video-icon {
+  background: #1330bf;
+  border-color: #eee;
+  border-style: solid;
+  border-width: 0 0 1px 1px;
+  color: #fff;
+  line-height: 1;
+  padding: 1rem;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 10; }
+
+.category {
+  position: absolute;
+  bottom: .75rem;
+  right: 0;
+  background: #d41010;
+  border-color: #eee;
+  border-style: solid;
+  border-width: 1px 0 1px 1px;
+  color: #fff;
+  font-family: sans-serif;
+  font-size: .8rem;
+  line-height: 1;
+  margin: 0;
+  padding: .5rem 1rem .5rem .75rem; }
+
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+  height: .5rem; }
+
 .hero-row {
   display: block; }
 
@@ -1248,7 +1362,25 @@ h1.site-title {
     font-size: 1.2em; } }
 @media (min-width: 960px) {
   h1.site-title {
-    margin: 3rem auto; } }
+    margin: 3rem auto; }
+
+  .card-row {
+    flex-direction: row;
+    justify-content: space-between; }
+
+  .card-row-1 > .story-card,
+  .card-row-3 > .story-card {
+    height: 675px; }
+
+  .story-card {
+    flex-basis: 0; }
+
+  .card-row-3 > .card-1 {
+    flex-grow: 2; }
+
+  .card-row-3 > .card-2 > a,
+  .card-row-3 > .card-3 > a {
+    margin-left: 1.5rem; } }
 @media (min-width: 1200px) {
   h1.site-title {
     margin: 4rem auto; }
@@ -1307,9 +1439,9 @@ h1.site-title {
   transition: all 1s; }
 
 .widget-card > a:hover img {
-  -moz-transform: scale(1.25);
-  -webkit-transform: scale(1.25);
-  transform: scale(1.25); }
+  -moz-transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1); }
 
 .widget-card-text {
   justify-content: space-between;
