--- a/css/_story-card.scss
+++ b/css/_story-card.scss
@@ -13,7 +13,7 @@
 	height: 100%;
 	min-height: 360px;
 	max-height: 80vh;
-	margin: 0 0 1.5rem 0;
+	margin: 0 0 24px 0;
 	padding: 0;
 	position: relative;
 	width: 100%;
@@ -30,6 +30,7 @@
 	height: 100%;
 	margin: 0;
 	padding: 0;
+	position: relative;
 	text-decoration: none;
 	width: 100%;
 }
