Added author social meta fields; built author bio box for author.php

--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -20,7 +20,10 @@ $highlight: #7fdbff;
 // social media colors
 $facebook_color:   #3b5998;
 $googleplus_color: #db4437;
+$instagram_color:  #000000;
 $linkedin_color:   #0077b5;
 $pinterest_color:  #bd081c;
 $reddit_color:     #ff4500;
+$soundcloud_color: #f84f0f;
 $twitter_color:    #55acee;
+$youtube_color:    #cd201f;
