--- a/css/style.scss
+++ b/css/style.scss
@@ -461,7 +461,7 @@ article > content .article-tags header {
 .single-basic-intro h1 {
 	font-size: 2em;
 	font-weight: 700;
-	margin-bottom: 1rem;
+	margin-bottom: 0;
 	padding: 0 4rem;
 	text-align: left;
 }
@@ -471,13 +471,18 @@ article > content .article-tags header {
 	font-size: 1.2em;
 	font-style: italic;
 	font-weight: 300;
-	padding: 0 4rem 2rem 4rem;
+	margin-top: 1rem;
+	padding: 0 4rem;
 	text-align: left;
 }
 
 .single-basic-intro img {
 	border-top: 1px solid $vltgray;
 	border-bottom: 1px solid $vltgray;
+}
+
+.single-basic-intro .featured-img {
+	margin-top: 2rem;
 }
 
 
@@ -503,6 +508,9 @@ article > content .article-tags header {
 	font-style: normal;
 	font-weight: 700;
 }
+
+.author-pubdate .author a { text-decoration: none; }
+.author-pubdate .author a:hover { text-decoration: underline; }
 
 .author-pubdate .pubdate {
 	color: $ltgray;
@@ -1188,6 +1196,7 @@ h1.site-title {
 	align-items: center;
 	display: flex;
 	flex-direction: row;
+	height: 50px;
 	justify-content: space-between;
 	margin: 0 auto;
 	max-width: calc(1200px - 2rem);
@@ -1218,7 +1227,56 @@ h1.site-title {
 
 .site-nav > * {
 	margin-left: 1.5rem;
+	position: relative;
 }
+
+.site-nav > * > .menu {
+	//border-top: 1px solid $bodybg;
+	position: absolute;
+	right: -1rem;
+	top: 2.25rem;
+	width: 150px;
+
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+-moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+}
+
+.site-nav > * > .menu > ul {
+	//background: $offwhite;
+	//border-top: 1px solid $bodybg;
+	border-color: $mltgray;
+	border-style: solid;
+	border-width: 0 1px 1px 1px;
+	list-style: none;
+	margin: 0;
+	padding: 0;	
+}
+
+.site-nav > * > .menu > ul > li {
+	border-top: 1px solid $vltgray;
+	font-size: .9rem;
+	font-weight: 400;
+	padding: 0;
+	text-align: left;
+}
+
+.site-nav > * > .menu > ul:first-child > li { border-top: 0; }
+
+.site-nav > * > .menu > ul > li > a {
+	background: $offwhite;
+	color: $voablue;
+	display: block;
+	padding: .75rem;
+	//text-transform: uppercase;
+}
+
+.site-nav > * > .menu > ul > li > a:hover {
+	background: $vltgray;
+	color: $voared;
+}
+
+
 
 .search-form-container {
 	background-color: $vltgray;
@@ -1386,6 +1444,25 @@ h1.site-title {
 	list-style: none;
 	margin: 0;
 	padding: 0;
+}
+
+
+
+.article-body ul {
+	margin-left: 1.5rem;
+}
+
+.article-body ul li {
+	margin-bottom: .5rem;
+}
+
+.article-body a {
+	text-decoration: none;
+}
+
+.article-body a:hover,
+.article-body a:active {
+	text-decoration: underline;
 }
 
 
