--- a/style.css
+++ b/style.css
@@ -509,7 +509,7 @@ article > content .article-tags header {
 .single-basic-intro h1 {
   font-size: 2em;
   font-weight: 700;
-  margin-bottom: 1rem;
+  margin-bottom: 0;
   padding: 0 4rem;
   text-align: left; }
 
@@ -518,12 +518,16 @@ article > content .article-tags header {
   font-size: 1.2em;
   font-style: italic;
   font-weight: 300;
-  padding: 0 4rem 2rem 4rem;
+  margin-top: 1rem;
+  padding: 0 4rem;
   text-align: left; }
 
 .single-basic-intro img {
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd; }
+
+.single-basic-intro .featured-img {
+  margin-top: 2rem; }
 
 .article-author {
   display: flex;
@@ -551,6 +555,12 @@ article > content .article-tags header {
   font-size: 1em;
   font-style: normal;
   font-weight: 700; }
+
+.author-pubdate .author a {
+  text-decoration: none; }
+
+.author-pubdate .author a:hover {
+  text-decoration: underline; }
 
 .author-pubdate .pubdate {
   color: #999;
@@ -1144,6 +1154,7 @@ h1.site-title {
   align-items: center;
   display: flex;
   flex-direction: row;
+  height: 50px;
   justify-content: space-between;
   margin: 0 auto;
   max-width: calc(1200px - 2rem);
@@ -1168,7 +1179,45 @@ h1.site-title {
   justify-content: flex-end; }
 
 .site-nav > * {
-  margin-left: 1.5rem; }
+  margin-left: 1.5rem;
+  position: relative; }
+
+.site-nav > * > .menu {
+  position: absolute;
+  right: -1rem;
+  top: 2.25rem;
+  width: 150px;
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5); }
+
+.site-nav > * > .menu > ul {
+  border-color: #ccc;
+  border-style: solid;
+  border-width: 0 1px 1px 1px;
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+
+.site-nav > * > .menu > ul > li {
+  border-top: 1px solid #ddd;
+  font-size: .9rem;
+  font-weight: 400;
+  padding: 0;
+  text-align: left; }
+
+.site-nav > * > .menu > ul:first-child > li {
+  border-top: 0; }
+
+.site-nav > * > .menu > ul > li > a {
+  background: #fcfcfc;
+  color: #1330bf;
+  display: block;
+  padding: .75rem; }
+
+.site-nav > * > .menu > ul > li > a:hover {
+  background: #ddd;
+  color: #d41010; }
 
 .search-form-container {
   background-color: #ddd;
@@ -1414,6 +1463,19 @@ h1.site-title {
   list-style: none;
   margin: 0;
   padding: 0; }
+
+.article-body ul {
+  margin-left: 1.5rem; }
+
+.article-body ul li {
+  margin-bottom: .5rem; }
+
+.article-body a {
+  text-decoration: none; }
+
+.article-body a:hover,
+.article-body a:active {
+  text-decoration: underline; }
 
 @media (min-width: 600px) {
   h1.site-title {
