--- a/style.css
+++ b/style.css
@@ -144,27 +144,6 @@ rows {
   max-width: 1200px; }
 
 /* ======================================================================== */
-footer {
-  background-color: #333;
-  color: #fcfcfc; }
-
-footer inner {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: auto;
-  max-width: 1200px; }
-
-footer item a {
-  color: #fcfcfc;
-  display: inline-block;
-  font-size: .8em;
-  font-weight: bold;
-  padding: 1em;
-  text-decoration: none;
-  text-transform: uppercase; }
-
-/* ======================================================================== */
 h1 {
   color: #333;
   text-align: center;
@@ -929,6 +908,10 @@ article > content .comments .comments-inner {
   background: #fcfcfc;
   border: 1px solid #ccc;
   border-radius: 5px;
+  -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1), 0 1px 5px 0 rgba(0, 0, 0, 0.1);
+  -mox-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1), 0 1px 5px 0 rgba(0, 0, 0, 0.1);
+  -ms-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1), 0 1px 5px 0 rgba(0, 0, 0, 0.1);
+  -o-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1), 0 1px 5px 0 rgba(0, 0, 0, 0.1);
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1), 0 1px 5px 0 rgba(0, 0, 0, 0.1);
   color: #1330bf;
   display: inline-block;
@@ -942,6 +925,10 @@ article > content .comments .comments-inner {
 
 .lazy-load-button:hover .lazy-load-button-text {
   background: #ccc;
+  -webkit-box-shadow: none;
+  -mox-box-shadow: none;
+  -ms-box-shadow: none;
+  -o-box-shadow: none;
   box-shadow: none;
   color: #fcfcfc;
   cursor: pointer; }
@@ -1046,7 +1033,7 @@ article > content .comments .comments-inner {
 
   .single-basic-intro h2 {
     font-size: 1em;
-    padding: 0 1rem 2rem 1rem; }
+    padding: 0 1rem; }
 
   article > content .article-categories header, article > content .article-tags header {
     margin-left: 0;
@@ -1183,13 +1170,16 @@ h1.site-title {
   position: relative; }
 
 .site-nav > * > .menu {
+  display: none;
   position: absolute;
   right: -1rem;
   top: 2.25rem;
   width: 150px;
-  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5); }
+  -webkit-box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.2), -2px 2px 8px -1px rgba(0, 0, 0, 0.2);
+  -mox-box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.2), -2px 2px 8px -1px rgba(0, 0, 0, 0.2);
+  -ms-box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.2), -2px 2px 8px -1px rgba(0, 0, 0, 0.2);
+  -o-box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.2), -2px 2px 8px -1px rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.2), -2px 2px 8px -1px rgba(0, 0, 0, 0.2); }
 
 .site-nav > * > .menu > ul {
   border-color: #ccc;
@@ -1206,18 +1196,21 @@ h1.site-title {
   padding: 0;
   text-align: left; }
 
-.site-nav > * > .menu > ul:first-child > li {
+.site-nav > * > .menu > ul > li:first-child {
   border-top: 0; }
 
 .site-nav > * > .menu > ul > li > a {
   background: #fcfcfc;
+  border-left: 4px solid transparent;
   color: #1330bf;
   display: block;
   padding: .75rem; }
 
 .site-nav > * > .menu > ul > li > a:hover {
-  background: #ddd;
-  color: #d41010; }
+  background: #eee;
+  border-left: 4px solid #1330bf;
+  color: #1330bf;
+  font-weight: 600; }
 
 .search-form-container {
   background-color: #ddd;
@@ -1235,7 +1228,6 @@ h1.site-title {
 .search-form input {
   font-size: 1rem; }
 
-/* homepage story-card layout ********************************************************************/
 .card-row {
   display: flex;
   flex-direction: column;
@@ -1477,6 +1469,34 @@ h1.site-title {
 .article-body a:active {
   text-decoration: underline; }
 
+.blog-footer {
+  background: #333;
+  font-size: .9rem;
+  width: 100%; }
+
+.blog-footer-inner {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  max-width: 1200px;
+  width: calc(100% - 2rem); }
+
+.footer-nav-menu ul {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+
+.footer-nav-menu a {
+  color: #fcfcfc;
+  font-weight: 600;
+  text-decoration: none; }
+
+.footer-nav-menu a:hover {
+  color: #ddd;
+  text-decoration: underline; }
+
 @media (min-width: 600px) {
   h1.site-title {
     margin: 2rem auto; }
@@ -1505,7 +1525,32 @@ h1.site-title {
   .author-bio-box .author-avatar {
     height: 120px;
     margin-right: 2rem;
-    width: 120px; } }
+    width: 120px; }
+
+  .blog-footer-inner {
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    margin: 0 auto;
+    padding: 1rem; }
+
+  .blog-footer-inner > .voa-logo {
+    flex-basis: 0;
+    flex-grow: 1; }
+
+  .footer-nav-menu {
+    flex-basis: 0;
+    flex-grow: 3; }
+
+  .footer-nav-menu ul {
+    align-items: flex-start;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between; }
+
+  .footer-nav-menu ul li {
+    min-width: 150px; } }
 @media (min-width: 750px) {
   .hero-title > h1 {
     font-size: 2em; }
