Bringing page.php layout closer to single/archive pages

--- a/css/style.scss
+++ b/css/style.scss
@@ -815,10 +815,10 @@ article > content .comments .comments-inner {
 	padding: .25em 1.5% .1em 1.5%;
 }
 
-.page .page-content,
-.archive .page-content {
-	padding: 2em 1.5%;
-}
+// .page .page-content,
+// .archive .page-content {
+// 	padding: 2em 1.5%;
+// }
 
 
 
