--- a/css/style.scss
+++ b/css/style.scss
@@ -126,6 +126,7 @@ rows row.rows_1, rows row.rows_2, rows row.rows_3 {
 	flex-direction: row;
 }
 
+/*
 row.rows_3 article { width: 22.75%; }
 row.rows_3 article.column_2 { padding-right: 3%; }
 row.rows_3 article.column_1 { width: 48.5%; padding-right:3%; }
@@ -144,10 +145,12 @@ row.rows_2 inner part.two {
 
 row.rows_1 article.column_1 { width: 100%; }
 row.rows_1 article.column_1 inner a img { height: auto; max-width: 100%; width: 100%; }
+*/
 
 /* ======================================================================== */
 
 /* multi-line padding text trick */
+/*
 row.rows_3 headline, row.rows_1 headline, row.rows_1 excerpt {
 	line-height:1.3;
 	padding: 2px 0;
@@ -166,12 +169,13 @@ row.rows_3 headline span a, row.rows_1 headline span a, row.rows_1 excerpt span 
 	position: relative;
 	left: -10px;
 }
+*/
 /* end multi-line padding text trick */
 
-
+/*
 part headline { font-size: 1em }
 part { width: 46.5%;  }
-part.one { padding-right: 6.81555555%; /* hack to fix off-by-2px issue */ }
+part.one { padding-right: 6.81555555%; } // hack to fix off-by-2px issue
 
 part.one img { height: auto; width: 100%; }
 part.one .part-one-img { position: relative; }
@@ -185,12 +189,12 @@ part.two byline {
 
 part a { color: $offblack !important }
 part a:hover { color: $voablue !important; }
-
+*/
 article {
 	display:flex;
 	flex-direction: column;
 }
-
+/*
 row.rows_3 inner, row.rows_1 inner {
 	line-height:1.3em;
 	position: relative;
@@ -202,7 +206,7 @@ headline {
 	line-height:1.3em;
 }
 
-/* hover cluster */
+// hover cluster
 row.rows_3 article.hovering headline,
 row.rows_1 article.hovering headline
 {
@@ -239,11 +243,11 @@ row.rows_1 byline, row.rows_3 byline {
 row.rows_3 excerpt { padding-left: 10px; }
 
 
-/* bw */
+// bw
 row.rows_3 article.hovering inner, row.rows_1 article.hovering inner { background-color: $offblack; }
 row.rows_3 article.hovering img, row.rows_1 article.hovering img { opacity:0.5 }
 
-/* end hover cluster */
+// end hover cluster
 
 row.rows_3 anchor, row.rows_1 anchor { position: absolute; display: flex; flex-direction: column; z-index: 100; width: calc(100% - 60px); }
 headline a, continue a { text-decoration: none; color: $offwhite; }
@@ -301,7 +305,7 @@ continue span { padding:10px; background-color: rgba(19,49,191, 1); color: $offw
 	font-size: .8em;
 	padding: .25em .8em .25em .5em;
 }
-
+*/
 
 
 /* ======================================================================== */
@@ -943,6 +947,7 @@ article > content .comments .comments-inner {
 
 
 
+/*
 @media (max-width: 900px) {
 
 	rows row.rows_2, rows row.rows_3 { flex-wrap: wrap; }
@@ -961,7 +966,7 @@ article > content .comments .comments-inner {
 	row.rows_2 part.two > * { padding-right: 1em; }
 
 }
-
+*/
 
 
 @media (max-width: 800px) {
@@ -1057,6 +1062,7 @@ article > content .comments .comments-inner {
 
 	.article-title-text { font-size: 1.5em; }
 
+	/*
 	row.rows_3 headline, row.rows_2 headline, row.rows_1 headline { font-size: 1em; }
 
 	row.rows_3 .column_1 headline, row.rows_3 .column_1 excerpt,
@@ -1066,6 +1072,7 @@ article > content .comments .comments-inner {
 	
 	row.rows_3 anchor, row.rows_1 anchor { width: calc(100% - 35px); }
 	.video-icon-inner .fa-video-camera { font-size: .8em; margin: .5em; }
+	*/
 
 	sidebar-inner { flex-direction: column; padding: 0 1em; }
 
@@ -1101,7 +1108,7 @@ article > content .comments .comments-inner {
 
 	.article-title-text { font-size: 1em; }
 
-	row.rows_3 excerpt, row.rows_2 excerpt, row.rows_1 excerpt { display: none !important; }
+	/* row.rows_3 excerpt, row.rows_2 excerpt, row.rows_1 excerpt { display: none !important; } */
 
 	// .voa-masthead menu a { padding: 1.25em .8em; }
 
