--- a/style.css
+++ b/style.css
@@ -187,210 +187,183 @@ rows row.rows_1, rows row.rows_2, rows row.rows_3 {
   display: flex;
   flex-direction: row; }
 
-row.rows_3 article {
-  width: 22.75%; }
+/*
+row.rows_3 article { width: 22.75%; }
+row.rows_3 article.column_2 { padding-right: 3%; }
+row.rows_3 article.column_1 { width: 48.5%; padding-right:3%; }
 
-row.rows_3 article.column_2 {
-  padding-right: 3%; }
+row.rows_2 article { width: 48.5% }
+row.rows_2 article.column_1 { padding-right:3% }
 
-row.rows_3 article.column_1 {
-  width: 48.5%;
-  padding-right: 3%; }
+row.rows_2 inner { display: flex; align-items: stretch; }
+row.rows_3 inner { display: flex; flex-direction: column; }
 
-row.rows_2 article {
-  width: 48.5%; }
-
-row.rows_2 article.column_1 {
-  padding-right: 3%; }
-
-row.rows_2 inner {
-  display: flex;
-  align-items: stretch; }
-
-row.rows_3 inner {
-  display: flex;
-  flex-direction: column; }
 
 row.rows_2 inner part.two {
-  display: flex;
-  flex-direction: column; }
+	display: flex;
+	flex-direction: column;
+}
 
-row.rows_1 article.column_1 {
-  width: 100%; }
-
-row.rows_1 article.column_1 inner a img {
-  height: auto;
-  max-width: 100%;
-  width: 100%; }
-
+row.rows_1 article.column_1 { width: 100%; }
+row.rows_1 article.column_1 inner a img { height: auto; max-width: 100%; width: 100%; }
+*/
 /* ======================================================================== */
 /* multi-line padding text trick */
+/*
 row.rows_3 headline, row.rows_1 headline, row.rows_1 excerpt {
-  line-height: 1.3;
-  padding: 2px 0;
-  border-left: 20px solid black; }
-
+	line-height:1.3;
+	padding: 2px 0;
+	border-left: 20px solid rgba(0,0,0,1);
+}
 row.rows_3 headline span, row.rows_1 headline span, row.rows_1 excerpt span {
-  background-color: black;
-  padding: 3px 0;
-  display: inline;
-  margin: 0; }
+	background-color: rgba(0,0,0,1);
+	padding: 3px 0;
+	display: inline;
+	margin: 0;
+}
 
-row.rows_1 excerpt span {
-  padding: 2.5px 0; }
+row.rows_1 excerpt span { padding: 2.5px 0; }
 
 row.rows_3 headline span a, row.rows_1 headline span a, row.rows_1 excerpt span span {
-  position: relative;
-  left: -10px; }
-
+	position: relative;
+	left: -10px;
+}
+*/
 /* end multi-line padding text trick */
-part headline {
-  font-size: 1em; }
+/*
+part headline { font-size: 1em }
+part { width: 46.5%;  }
+part.one { padding-right: 6.81555555%; } // hack to fix off-by-2px issue
 
-part {
-  width: 46.5%; }
+part.one img { height: auto; width: 100%; }
+part.one .part-one-img { position: relative; }
 
-part.one {
-  padding-right: 6.81555555%;
-  /* hack to fix off-by-2px issue */ }
-
-part.one img {
-  height: auto;
-  width: 100%; }
-
-part.one .part-one-img {
-  position: relative; }
-
+part.two { }
 part.two byline {
-  color: #666;
-  font-size: .8em;
-  margin-top: .5em; }
+	color: $midgray;
+	font-size: .8em;
+	margin-top: .5em;
+}
 
-part a {
-  color: #333 !important; }
-
-part a:hover {
-  color: #1330bf !important; }
-
+part a { color: $offblack !important }
+part a:hover { color: $voablue !important; }
+*/
 article {
   display: flex;
   flex-direction: column; }
 
+/*
 row.rows_3 inner, row.rows_1 inner {
-  line-height: 1.3em;
-  position: relative; }
+	line-height:1.3em;
+	position: relative;
+}
 
 headline {
-  font-weight: 700;
-  font-size: 1.5em;
-  line-height: 1.3em; }
+	font-weight: 700;
+	font-size:1.5em;
+	line-height:1.3em;
+}
 
-/* hover cluster */
+// hover cluster
 row.rows_3 article.hovering headline,
-row.rows_1 article.hovering headline {
-  border-left: 20px solid #1331bf; }
-
+row.rows_1 article.hovering headline
+{
+	border-left: 20px solid rgba(19,49,191,1);
+}
 row.rows_3 article.hovering headline span,
-row.rows_1 article.hovering headline span {
-  background-color: #1331bf; }
+row.rows_1 article.hovering headline span
+{
+	background-color: rgba(19,49,191,1);
+}
 
-row.rows_2 article img {
-  display: block; }
+row.rows_2 article img { display: block; }
 
 row.rows_2 article.hovering img {
-  opacity: 0.7; }
+	opacity: 0.7;
+}
 
 row.rows_2 article.hovering headline a {
-  color: #fcfcfc !important; }
+	color: $offwhite !important;
+}
 
 row.rows_2 article.hovering inner {
-  background-color: rgba(51, 51, 51, 0.8);
-  height: 100%;
-  color: #ddd; }
+	background-color: rgba(51,51,51,0.8);
+	height: 100%;
+	color: $vltgray;
+}
 
 row.rows_1 byline, row.rows_3 byline {
-  background: rgba(255, 255, 255, 0.8);
-  color: #333;
-  margin: .5em auto 1em 0;
-  padding: .25em 10px; }
+	background: rgba(255, 255, 255, .8);
+	color: $offblack;
+	margin: .5em auto 1em 0;
+	padding: .25em 10px;
+}
+row.rows_3 excerpt { padding-left: 10px; }
 
-row.rows_3 excerpt {
-  padding-left: 10px; }
 
-/* bw */
-row.rows_3 article.hovering inner, row.rows_1 article.hovering inner {
-  background-color: #333; }
+// bw
+row.rows_3 article.hovering inner, row.rows_1 article.hovering inner { background-color: $offblack; }
+row.rows_3 article.hovering img, row.rows_1 article.hovering img { opacity:0.5 }
 
-row.rows_3 article.hovering img, row.rows_1 article.hovering img {
-  opacity: 0.5; }
+// end hover cluster
 
-/* end hover cluster */
-row.rows_3 anchor, row.rows_1 anchor {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  z-index: 100;
-  width: calc(100% - 60px); }
-
-headline a, continue a {
-  text-decoration: none;
-  color: #fcfcfc; }
+row.rows_3 anchor, row.rows_1 anchor { position: absolute; display: flex; flex-direction: column; z-index: 100; width: calc(100% - 60px); }
+headline a, continue a { text-decoration: none; color: $offwhite; }
+row.rows_3 headline {  }
+row.rows_3 excerpt {  }
 
 row.rows_3 excerpt, row.rows_1 excerpt {
-  color: #fcfcfc; }
-
-excerpt {
-  margin-top: 0.5em; }
+	color: $offwhite;
+}
+excerpt { margin-top: 0.5em; }
 
 row.rows_3 .column_1 headline, row.rows_3 .column_1 excerpt {
-  width: 45%; }
+	width: 45%;
+}
 
 row.rows_1 .column_1 headline, row.rows_1 .column_1 excerpt {
-  width: 45%; }
+	width: 45%;
+}
 
-continue {
-  margin-top: 1em; }
+continue { margin-top: 1em; }
+continue span { padding:10px; background-color: rgba(19,49,191, 1); color: $offwhite }
 
-continue span {
-  padding: 10px;
-  background-color: #1331bf;
-  color: #fcfcfc; }
 
 .video-icon {
-  display: block;
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 1000; }
+	display: block;
+	position: absolute;
+	top: 0;
+	right: 0;
+	z-index: 1000;
+}
 
 .video-icon-inner {
-  background-color: #1330bf;
-  border-left: 4px solid #eee;
-  border-bottom: 4px solid #eee;
-  color: #fcfcfc;
-  text-align: center; }
+	background-color: $voablue;
+	border-left: 4px solid $bodybg;
+	border-bottom: 4px solid $bodybg;
+	color: $offwhite;
+	text-align: center;
+}
 
-.video-icon-inner .fa-video-camera {
-  font-size: 1em;
-  margin: 1em; }
+.video-icon-inner .fa-video-camera { font-size: 1em; margin: 1em; }
 
 .language-service {
-  display: block;
-  position: absolute;
-  bottom: 1em;
-  right: 0;
-  z-index: 1000; }
+	display: block;
+	position: absolute;
+	bottom: 1em;
+	right: 0;
+	z-index: 1000;
+}
 
-.lang-voa-english {
-  display: none;
-  visibility: hidden; }
+.lang-voa-english { display: none; visibility: hidden; }
 
 .language-service-inner {
-  background-color: #d41010;
-  color: #fcfcfc;
-  font-size: .8em;
-  padding: .25em .8em .25em .5em; }
-
+	background-color: $voared;
+	color: $offwhite;
+	font-size: .8em;
+	padding: .25em .8em .25em .5em;
+}
+*/
 /* ======================================================================== */
 /* single article */
 /* ======================================================================== */
@@ -939,35 +912,26 @@ article > content .comments .comments-inner {
 
   article > content .article-categories header, article > content .article-tags header {
     width: 33.3333%; } }
+/*
 @media (max-width: 900px) {
-  rows row.rows_2, rows row.rows_3 {
-    flex-wrap: wrap; }
 
-  row.rows_3 article.column_1 {
-    width: 100%;
-    padding: 0;
-    margin-bottom: 1.5em; }
+	rows row.rows_2, rows row.rows_3 { flex-wrap: wrap; }
 
-  row.rows_3 article.column_2,
-  row.rows_3 article.column_3 {
-    width: 48.5%; }
+	row.rows_3 article.column_1 { width: 100%; padding: 0; margin-bottom: 1.5em; }
 
-  row.rows_2 article {
-    width: 100%;
-    padding-right: 0; }
+	row.rows_3 article.column_2,
+	row.rows_3 article.column_3 { width: 48.5%; }
 
-  row.rows_2 article.column_1 {
-    padding-right: 0;
-    margin-bottom: 1.5em; }
+	row.rows_2 article { width: 100%; padding-right: 0; }
+	row.rows_2 article.column_1 { padding-right: 0; margin-bottom: 1.5em; }
 
-  row.rows_2 part {
-    width: 50%; }
 
-  row.rows_2 part.one {
-    padding-right: 3%; }
+	row.rows_2 part { width: 50%; }
+	row.rows_2 part.one { padding-right: 3%; }
+	row.rows_2 part.two > * { padding-right: 1em; }
 
-  row.rows_2 part.two > * {
-    padding-right: 1em; } }
+}
+*/
 @media (max-width: 800px) {
   .single article,
   .page .rows_1 > article,
@@ -1054,23 +1018,17 @@ article > content .comments .comments-inner {
   .article-title-text {
     font-size: 1.5em; }
 
-  row.rows_3 headline, row.rows_2 headline, row.rows_1 headline {
-    font-size: 1em; }
-
-  row.rows_3 .column_1 headline, row.rows_3 .column_1 excerpt,
-  row.rows_1 .column_1 headline, row.rows_1 .column_1 excerpt {
-    width: 65%; }
-
-  row.rows_3 excerpt, row.rows_1 excerpt, row.rows_2 excerpt {
-    font-size: .9em; }
-
-  row.rows_3 anchor, row.rows_1 anchor {
-    width: calc(100% - 35px); }
-
-  .video-icon-inner .fa-video-camera {
-    font-size: .8em;
-    margin: .5em; }
-
+  	/*
+  	row.rows_3 headline, row.rows_2 headline, row.rows_1 headline { font-size: 1em; }
+  
+  	row.rows_3 .column_1 headline, row.rows_3 .column_1 excerpt,
+  	row.rows_1 .column_1 headline, row.rows_1 .column_1 excerpt { width: 65%; }
+  
+  	row.rows_3 excerpt, row.rows_1 excerpt, row.rows_2 excerpt { font-size: .9em; }
+  	
+  	row.rows_3 anchor, row.rows_1 anchor { width: calc(100% - 35px); }
+  	.video-icon-inner .fa-video-camera { font-size: .8em; margin: .5em; }
+  	*/
   sidebar-inner {
     flex-direction: column;
     padding: 0 1em; }
@@ -1102,9 +1060,7 @@ article > content .comments .comments-inner {
   .article-title-text {
     font-size: 1em; }
 
-  row.rows_3 excerpt, row.rows_2 excerpt, row.rows_1 excerpt {
-    display: none !important; }
-
+  /* row.rows_3 excerpt, row.rows_2 excerpt, row.rows_1 excerpt { display: none !important; } */
   continue {
     display: none !important;
     opacity: 0 !important;
