--- a/css/_prefixed-mixins.scss
+++ b/css/_prefixed-mixins.scss
@@ -7,3 +7,11 @@
 	     -o-box-shadow: $shadow;
 	        box-shadow: $shadow;
 }
+
+@mixin transition($transition...) {
+	-webkit-transition: $transition;
+	   -mox-transition: $transition;
+	    -ms-transition: $transition;
+	     -o-transition: $transition;
+	        transition: $transition;
+}
